added new notes

--- a/AWS-Books/SageMaker-Best-Practices/Training-At-Scale/Training-Tuning-At-Scale.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Training-At-Scale/Training-Tuning-At-Scale.ipynb
@@ -45,7 +45,14 @@
     "\n",
     "## Scaling the compute resources\n",
     "\n",
-    "#### Both the distributed training strategies depend on a cluster of compute resources to spread the training load. When scaling the distributed cluster to meet the training demands, the recommended best practices are as follows:"
+    "#### Both the distributed training strategies depend on a cluster of compute resources to spread the training load. When scaling the distributed cluster to meet the training demands, the recommended best practices are as follows:\n",
+    "\n",
+    "- First, scale vertically. That is, scale from a single GPU to multiple GPUs on a single instance. For example, let's say you started with the instance type p3.2xlarge, which has a single GPU for training your model, and you find yourself needing a greater number of GPUs to increase the training time. Change the instance type to p3.16xlarge, which has eight GPUs. This will result in a nearly eight-times decrease in the training, a near-linear speedup. Keeping the training job on a single scaled-up instance results in better performance than using multiple instances while keeping the cost low. \n",
+    "\n",
+    "- Next, scale from a single instance to multiple instances. When you reach limits of the instance types offered and still need to scale your training even further, then use multiple instances of the same type, that is, scale from a single p3.16xlarge to two p3.16xlarge instances. This will give you double the compute capacity, going from 8 GPUs on a single instance, to 16 GPUs across two instances. Keep in mind that when you use multiple instances in the training cluster, all instances should be in the same Availability Zone. For example, instances in us-west-2 must all be in us-west-2a or all in us-west-2b. Your training data should also be in the same region, us-west-2.\n",
+    "\n",
+    "#### When moving from a single instance to multiple instances, it is recommended that you observe the model convergence and increase the batch size as necessary. Since the batch size you use is split across GPUs, each GPU is processing a lower batch size, which could lead to a high error rate and disrupt the model convergence.\n",
+    "\n"
    ]
   },
   {
