added new notes

--- a/AWS-Books/SageMaker-Best-Practices/Training-At-Scale/Training-Tuning-At-Scale.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Training-At-Scale/Training-Tuning-At-Scale.ipynb
@@ -326,6 +326,76 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Organizing and tracking training jobs with SageMaker Experiments\n",
+    "\n",
+    "#### A key challenge ML practitioners face is keeping track of the myriad ML experiments that need to be executed before a model achieves desired results. For a single ML project, it is not uncommon for data scientists to routinely train several different models looking for improved accuracy. HPT adds more training jobs to these experiments. Typically, there are many details to track for experiments such as hyperparameters, model architectures, training algorithms, custom scripts, metrics, result artifacts, and more.\n",
+    "\n",
+    "#### In this section, we will discuss Amazon SageMaker Experiments, which allows you to organize, track, visualize, and compare ML models across all phases of the ML lifecycle, including feature engineering, model training, model tuning, and model deploying. SageMaker Experiments' capability tracks model lineage, allowing you to troubleshoot production issues and audit your models to meet compliance requirements.\n",
+    "\n",
+    "#### Experiment: An experiment encapsulates all related components that represent the ML problem you are attempting to solve. Each experiment is a collection of trials, with the goal of determining the trial that produces the best model.\n",
+    "\n",
+    "#### Trial: A trial represents a single attempt at solving the ML problem that captures the end-to-end ML process within an experiment. Each trial is a collection consisting of several trial components.\n",
+    "\n",
+    "#### Trial Component: A trial component represents a specific step within a given trial. For example, the data preprocessing step could be one trial component, and model training could be another trial component.\n",
+    "\n",
+    "#### Tracker: A tracker is used to track metadata of individual trial components, including all parameters, inputs, outputs, artifacts, and metrics. Since this metadata is tracked and persisted, you can link the final model artifact to its origin."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weather_experiment = Experiment.create(\n",
+    "    experiment_name=f\"weather-experiment-{int(time.time())}\",  \n",
+    "    description=\"Weather Data Prediction\",\n",
+    "    sagemaker_boto_client=sm)\n",
+    "\n",
+    "with Tracker.create(display_name=\"Training\", sagemaker_boto_client=sm) as tracker:\n",
+    "    # Log the location of the training dataset\n",
+    "    tracker.log_input(name=\"weather-training-dataset\",\n",
+    "  media_type=\"s3/uri\",\n",
+    "  value=\"s3://{}/{}/{}/\".format(s3_bucket, s3_prefix, 'train'))\n",
+    "\n",
+    "for i, max_depth in enumerate([2, 5]):\n",
+    "    trial_name = f\"xgboost-training-job-trial-{max_depth}-max-depth-{int(time.time())}\"\n",
+    "    xgboost_trial = Trial.create(\n",
+    "        trial_name=trial_name,\n",
+    "        experiment_name=weather_experiment.experiment_name,\n",
+    "        sagemaker_boto_client=sm,\n",
+    "    )\n",
+    "    max_depth_trial_name_map[max_depth] = trial_name\n",
+    "    xgboost_training_job_name = \"xgboost-training-job-{}\".format(int(time.time()))\n",
+    "\n",
+    "\n",
+    "# Now associate the estimator with the Experiment and Trial\n",
+    "    estimator.fit(\n",
+    "        inputs={'training': train_input},\n",
+    "        job_name=xgboost_training_job_name,\n",
+    "        experiment_config={\n",
+    "            \"TrialName\": xgboost_trial.trial_name,\n",
+    "            \"TrialComponentDisplayName\": \"Training\",\n",
+    "        },\n",
+    "        wait=False,\n",
+    "    )\n",
+    "\n",
+    "# Finally, after the experiment is completed, let's analyze the experiment results:\n",
+    "trial_component_analytics = ExperimentAnalytics(sagemaker_session=sagemaker_session, experiment_name=experiment_name )\n",
+    "trial_component_analytics.dataframe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### As you can see from this section, a SageMaker experiment gives you a way to organize your efforts toward an ML goal and allows visibility into several important aspects of those efforts. A best practice we recommend is that any time you launch a training or tuning job, wrap it in an experiment. This allows you to gain visibility into the training and tuning jobs without any additional cost."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
