added new notes

--- a/AWS-Books/SageMaker-Best-Practices/Training-At-Scale/Profile-Training-Jobs-Debugger.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Training-At-Scale/Profile-Training-Jobs-Debugger.ipynb
@@ -67,7 +67,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### While DebuggerHookConfig allows you to configure and save tensors, a rule analyzes the tensors that are captured during the training for specific conditions such as loss not decreasing. SageMaker Debugger supports two different types of rules: built-in and custom. SageMaker Debugger comes with a set of built-in rules in Python that can detect and report common training problems such as overfitting, underfitting, and vanishing gradients. With custom rules, you write your own rules in Python for SageMaker Debugger to evaluate against the collected tensors."
+    "#### While DebuggerHookConfig allows you to configure and save tensors, a rule analyzes the tensors that are captured during the training for specific conditions such as loss not decreasing. SageMaker Debugger supports two different types of rules: built-in and custom. SageMaker Debugger comes with a set of built-in rules in Python that can detect and report common training problems such as overfitting, underfitting, and vanishing gradients. With custom rules, you write your own rules in Python for SageMaker Debugger to evaluate against the collected tensors.\n",
+    "\n",
+    "#### For example, in the following code block, Debugger collects tensors related to the metrics collection and evaluates the tensors to detect whether the training loss is reduced throughout the training process:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Estimator(\n",
+    "rules=[\n",
+    "        Rule.sagemaker(\n",
+    "            rule_configs.loss_not_decreasing(),\n",
+    "            rule_parameters={\n",
+    "                \"collection_names\": \"metrics\",\n",
+    "                \"num_steps\": str(save_interval * 2),\n",
+    "            },\n",
+    "        ),\n",
+    "    ],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Finally, ProfilerConfig allows you to collect system metrics such as CPU, GPU, Memory, I/O, and framework metrics specific to the framework being used in your training job. For the system metrics, you must specify the time interval for which you want to collect metrics, while for framework metrics, you specify the starting step and the number of steps, as shown in the following code block:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Estimator(\n",
+    "    profiler_config = ProfilerConfig(\n",
+    "    ## Monitoring interval in milliseconds\n",
+    "    system_monitor_interval_millis=500)\n",
+    "    ## Start collecting metrics from step 2 and collect from the next 7 steps.\n",
+    "    framework_profile_params=FrameworkProfile(\n",
+    "    start_step=2,\n",
+    "    num_steps=7\n",
+    "))\n",
+    "  "
    ]
   },
   {
