added new notes

--- a/AWS-Books/SageMaker-Best-Practices/Training-At-Scale/Profile-Training-Jobs-Debugger.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Training-At-Scale/Profile-Training-Jobs-Debugger.ipynb
@@ -119,7 +119,33 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Additionally, you can use Debugger's built-in actions to automate the responses. The following code block shows how to use a combination of Debugger's built-in rules and actions to stop a training job if the loss is not continuously reduced during the training process:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "built_rules=[\n",
+    "        #Check for loss not decreasing during training and stop the training job.\n",
+    "        Rule.sagemaker(\n",
+    "        rule_configs.loss_not_decreasing(),\n",
+    "        actions = (rule_configs.StopTraining())\n",
+    "        )\n",
+    "\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### On the other hand, when you have the ProfilerConfig parameter configured, a profiler report with a detailed analysis of system metrics and framework metrics is generated and persisted in S3. You can download, review, and apply recommendations to the profiler report.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
