--- a/AWS-Books/SageMaker-Best-Practices/Training-At-Scale/Profile-Training-Jobs-Debugger.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Training-At-Scale/Profile-Training-Jobs-Debugger.ipynb
@@ -143,8 +143,99 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### On the other hand, when you have the ProfilerConfig parameter configured, a profiler report with a detailed analysis of system metrics and framework metrics is generated and persisted in S3. You can download, review, and apply recommendations to the profiler report.\n",
-    "\n"
+    "#### On the other hand, when you have the ProfilerConfig parameter configured, a profiler report with a detailed analysis of system metrics and framework metrics is generated and persisted in S3. You can download, review, and apply recommendations to the profiler report."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Specify the rules you want to run\n",
+    "\n",
+    "built_in_rules=[\n",
+    "    #Check for loss not decreasing during training and stop the training job.\n",
+    "      Rule.sagemaker(\n",
+    "      rule_configs.loss_not_decreasing(),\n",
+    "      actions = (rule_configs.StopTraining())\n",
+    "      ),\n",
+    "      #Check for overfit, overtraining and stalled training\n",
+    "      Rule.sagemaker(rule_configs.overfit()),  \n",
+    "   Rule.sagemaker(rule_configs.overtraining()),       \n",
+    "   Rule.sagemaker(rule_configs.stalled_training_rule())     \n",
+    "]\n",
+    "\n",
+    "#Create an estimator and pass in the built_in rules.\n",
+    "pt_estimator = PyTorch(\n",
+    "    rules = built_in_rules\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### After calling fit, SageMaker starts one training job and one processing job for each configured built-in rule. The rule evaluation status is visible in the training logs in CloudWatch at regular intervals. You can also view the results of the rule execution programmatically using the following command:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_estimator.latest_training_job.rule_job_summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Built-in rules are managed by AWS, freeing you from having to manage updates to rules. You simply plug them into the estimator. However, you may want to monitor a metric that is not included in the built-in rules, in which case you must configure a custom rule. A bit more work is involved with custom rules. For example, let's say you want to track if the gradients are becoming too large during training. To create a custom rule for this, you must extend the Rule interface provided by SageMaker Debugger.  \n",
+    "\n",
+    "#### In the following example, the custom rule will work with the tensors that were collected using the gradients collection. The invoke_at_step method provides the logic to be executed. At each step, the mean value of the gradient is compared against a threshold. If the gradient value is greater than the threshold, the rule is triggered, as shown in the following code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CustomGradientRule(Rule):\n",
+    "    def __init__(self, base_trial, threshold=10.0):\n",
+    "        super().__init__(base_trial)\n",
+    "        self.threshold = float(threshold)\n",
+    "    def invoke_at_step(self, step):\n",
+    "        for tname in self.base_trial.tensor_names(collection=\"gradients\"):\n",
+    "            t = self.base_trial.tensor(tname)\n",
+    "            abs_mean = t.reduction_value(step, \"mean\", abs=True)\n",
+    "            if abs_mean > self.threshold:\n",
+    "                return True\n",
+    "        return False\n",
+    "\n",
+    "custom_rule = Rule.custom(\n",
+    "    name='CustomRule', # used to identify the rule\n",
+    "    # rule evaluator container image\n",
+    "    image_uri='759209512951.dkr.ecr.us-west-2.amazonaws.com/sagemaker-debugger-rule-evaluator:latest', \n",
+    "    instance_type='ml.t3.medium',\n",
+    "    source='rules/my_custom_rule.py', # path to the rule source file\n",
+    "    rule_to_invoke='CustomGradientRule', # name of the class to invoke in the rule source file\n",
+    "    volume_size_in_gb=30, # EBS volume size required to be attached to the rule evaluation instance\n",
+    "    collections_to_save=[CollectionConfig(\"gradients\")],\n",
+    "    # collections to be analyzed by the rule. since this is a first party collection we fetch it as above\n",
+    "    rule_parameters={\n",
+    "    #Threshold to compare the gradient value against\n",
+    "    \"threshold\": \"20.0\"     }\n",
+    ")\n",
+    "\n",
+    "pt_estimator_custom = PyTorch(\n",
+    "    ## New parameter\n",
+    "    rules = [custom_rule]\n",
+    ")\n",
+    "\n",
+    "estimator.fit(wait = False)"
    ]
   }
  ],
