--- a/AWS-Books/SageMaker-Best-Practices/Training-At-Scale/Profile-Training-Jobs-Debugger.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Training-At-Scale/Profile-Training-Jobs-Debugger.ipynb
@@ -272,14 +272,27 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Similar to the system metrics, you can review framework metrics as well. The following code block shows how to query for framework metrics:"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Create a reader for the system metrics\n",
+    "framework_metrics_reader = S3AlgorithmMetricsReader(path)\n",
+    "framework_metrics_reader.refresh_event_file_list()\n",
+    "last_timestamp = framework_metrics_reader.get_timestamp_of_latest_available_file()\n",
+    "events = framework_metrics_reader.get_events(0, last_timestamp)\n",
+    "#We can inspect one of the recorded events to get the following:\n",
+    "print(\"Event name:\", events[0].event_name,\n",
+    "      \"\\nStart time:\", timestamp_to_utc(events[0].start_time/1000000000),\n",
+    "      \"\\nEnd time:\", timestamp_to_utc(events[0].end_time/1000000000),\n",
+    "      \"\\nDuration:\", events[0].duration, \"nanosecond\")"
+   ]
   }
  ],
  "metadata": {
